syntax = "proto3";

package google.protobuf;

// Any triggers import of IMessageType from @protobuf-ts/runtime.
// A local message named IMessageType should cause a collision that needs aliasing.
message Any {
    string type_url = 1;
    bytes value = 2;
}

message IMessageType {
    string name = 1;
    int32 version = 2;
}
